fix include path error

--- a/global/wordpress.conf
+++ b/global/wordpress.conf
@@ -27,7 +27,7 @@ location ~ [^/]\.php(/|$) {
 	}
 	# This is a robust solution for path info security issue and works with "cgi.fix_pathinfo = 1" in /etc/php.ini (default)
 
-	include fastcgi.conf;
+	include shared/fastcgi_params;
 	fastcgi_index index.php;
 #	fastcgi_intercept_errors on;
 	fastcgi_pass php;
