--- a/nginx.conf
+++ b/nginx.conf
@@ -71,7 +71,7 @@ http {
 	# Upstream to abstract backend connection(s) for PHP.
 	upstream php {
 		#this should match value of "listen" directive in php-fpm pool
-		server unix:/var/run/php5-fpm.pid;
+		server unix:/var/run/php5-fpm.sock;
 #		server 127.0.0.1:9000;
 	}
 
